--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 	</head>
-	<body class="bg-[#131429] ">
-		<div class="container">
+	<body style="background-image: url(img/backround1.png); background-repeat:no-repeat; background-size: 100% auto;" class="bg-[#131429] ">
+		<div  class="container">
 			<nav class="relative px-20 py-4 flex justify-between items-center">
 				<a class="text-3xl font-bold leading-none" href="#">
 					<svg width="154" height="29" viewBox="0 0 154 29" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -318,82 +318,100 @@
 						<br>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">What is your Refund Policy? </h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">What is your Refund Policy? </h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg"  onclick="ft_sc('svg2', 'psc2')">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc1" class="font-[Inter] font-400 text-base p-8 pt-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								We do full refunds before the start of the boost if for any reason you change your mind and decide to not to use our services. If the boost has already begun, we will calculate a partial refund for you.                
 						</div>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">Who will play on my account?</h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Who will play on my account?</h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc1" class="font-[Inter] font-400 text-base p-8 pt-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								We only hire players who were able to get 4000+ Skill Rating on their Overwatch accounts (Specific Roles). We carefully check the candidates for the reality of this rating. In the process, we ban boosters that violate our internal rules, such as chat with client’s friends without permission, toxic behavior, or taking an order without being ready to start a boost.
 						</div>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">How long will it take to complete my order?</h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">How long will it take to complete my order?</h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc1" class="font-[Inter] font-400 text-base p-8 pt-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								This is usually really fast. Most small orders with shorter lengths end on the same day. The speed of execution depends on a number of factors such as the length of the order, the desired rating and your MMR. Duo orders are also executed longer than solo orders, so duo orders require you and your booster to be ready to play at the same time.
 						</div>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">Is it possible to make the booster play on the heroes of my choice?</h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Is it possible to make the booster play on the heroes of my choice?</h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc1" class="font-[Inter] font-400 text-base p-8 pt-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								Yes, we provide such a service as an extra option you can choose while creating your order!
 						</div>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">Will my account got banned?</h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Will my account got banned?</h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc5" class="font-[Manrope] font-medium p-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p  id="psc5" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								At the moment, we have not encountered ANY cases of ban for Overwatch boost. Perhaps this can change, but at the moment everything looks very safe.
 						</div>
 						<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
 							<button class="flex items-center justify-between w-full p-8">
-								<h1 class="font-[Manrope] font-bold	 text-gray-700 dark:text-white">What happens after payment?</h1>
+								<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">What happens after payment?</h1>
 								<span class="text-white  rounded-full">
 									<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 									</svg>
 								</span>
 							</button>
-							<p  id="psc5" class="font-[Manrope] font-medium p-8 text-sm text-gray-500 dark:text-gray-300" style="margin-top: -50px;">
+							<p id="psc5" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 								You will be redirected back to the page of our client area, where you can register an account on our service. It takes a couple of minutes. After that, your order will go to our database, where carefully selected boosters will be able to pick up your order and start right away! The whole process for most orders takes no more than 5-15 minutes.                
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- content 5 -->
-			<section id="content5" data-aos="fade-up" class="">
-				<img src="img/lastbox.svg" alt="" class="ml-[80px] w-auto">
+			<section id="content5" data-aos="fade-up" class="rounded-[1.25rem]">
+				<div style="background: linear-gradient(96.71deg, #E94A65 -7.49%, #FF274C 104.29%);" class="rounded-[1.25rem] px-[3.688rem] py-[4rem] opacity-90 w-full h-full">
+					<div class="flex flex-col justify-start items-center">
+						<div class="flex flex-row items-start justify-start w-full">
+							<h2 class="text-[0.875rem] font-[100] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">THE BEST &nbsp;</h2>
+							<h2 class="text-[0.875rem] font-[900] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">OVERWATCH 2 &nbsp;</h2>
+							<h2 class="text-[0.875rem] font-[100] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">BOOSTING SERVICE</h2>
+						</div>
+						<div class="flex flex-col items-start justify-start w-full">
+							<h2 class="text-[3.100rem] font-extralight font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase leading-[3.375rem]">CHEAP OVERWATCH 2</h2>
+							<h2 class="pb-[1.438rem] text-[3.125rem] font-bold font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase leading-[3.375rem]">BOOST BY THE BEST BOOSTERS</h2>
+							<button style="background: rgba(19, 20, 41, 0.2);" class="flex flex-row justify-center items-center font-[Inter] text-[1rem] color-[#FFFFFF] w-[11.938rem] h-[3.625rem] bg-[#E94A65]  rounded-[1.875rem] text-white">Get Booster
+								<svg  class="relative left-1.5 top-0.5" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M10 1L15 6L10 11" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+									<path d="M1 6H15" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+								</svg>
+							</button>
+						</div>
+					</div>
+				</div>
 			</section>
 			<footer class="p-4  sm:p-6">
 				<div class="flex justify-center gap-6">
