--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
 			</section>
 			<section id="content3" data-aos="fade-up">
 				<!-- row 1 -->
-				<div class="r1 flex flex-row w-full items-start justify-center mb-[1.563rem]">
+				<div class="r1 flex xl:flex-row flex-col items-center w-full xl:items-start justify-center mb-[1.563rem]">
 					<!-- box 1 -->
-					<div id="c3-box1" class="c3-box">
+					<div id="c3-box1" class="c3-box mb-[1.563rem]">
 						<div class="img3"><img src="img/Frame.svg" alt=""></div>
 						<h2 >Highest Quality & Privacy
 						</h2>
 						<p class="font-[Manrope]">AccMart strives to provide top quality service from the point of purchase until the end of the boosting process. All data that flows through the site is encrypted to keep the utmost privacy of our customers. We strive to be the highest quality service provider on the boosting market, with our customers' privacy at the forefront. </p>
 					</div>
 					<!-- box 2 -->
-					<div class="c3-box">
+					<div class="c3-box mb-[1.563rem]">
 						<div class="img3"><img src="img/frame1.svg" alt=""></div>
 						<h2 >Best Performing Boosters</h2>
 						<p class="font-[Manrope]">We hire carefully selected professional boosters in order to complete any request that may arise to achieve the highest possible win rate. Our goal is to provide you with a fast and efficient boosting service in a timely manner with most boosts being started within the first 15 minutes of the order being placed.</p>
@@ -158,16 +158,16 @@
 					</div>
 				</div>
 				<!-- row 2 -->
-				<div class="r2 flex flex-row w-full items-start justify-center ">
+				<div class="r1 flex xl:flex-row flex-col items-center w-full xl:items-start justify-center mb-[1.563rem]">
 					<!-- box 4 -->
-					<div id="c3-box1" class="c3-box">
+					<div id="c3-box1" class="c3-box mb-[1.563rem]">
 						<div class="img3"><img src="img/coin.svg" alt=""></div>
 						<h2 class="font-[Manrope]">Fair Prices
 						</h2>
 						<p class="font-[Manrope]">There is a significant competition when it comes to Overwatch 2 boosting prices. That is why we're always gonna strive to provide fair market prices with the best value for all of our Boosting Services!</p>
 					</div>
 					<!-- box 5 -->
-					<div class="c3-box">
+					<div class="c3-box mb-[1.563rem]">
 						<div class="img3"><img src="img/like.svg" alt=""></div>
 						<h2 class="font-[Manrope]">Simple & Carefree </h2>
 						<p class="font-[Manrope]">We understand that these days people don’t have much time, and especially not enough time to waste on long and dull checkout and boosting procedures. </p>
@@ -184,6 +184,7 @@
 		<!-- backround 2 -->
 		<section style="background-image: url(img/backround\ 2.png); background-repeat:no-repeat; background-size: 100% auto;" class="w-full">
 			<div class="container">
+				<!-- steps -->
 				<section class="flex flex-row items-center justify-between w-[80%] mx-auto my-[8.875rem]">
 					<div class="flex flex-row items-center justify-start">
 						<div class="border-l-solid border-l-[#E94A65] border-l-[0.125rem] h-[4.125rem] mr-[1rem]"></div>
@@ -220,8 +221,8 @@
 					<p class="text-[#757095] font-[Manrope]">Accmart Latest customer reviews and feedback about products &  services quality.</p>
 				</section>
 				<section class="flex flex-col mx-auto items-center justify-center">
-					<div class="flex 2xl:flex-row sm:flex-col items-center justify-center mb-[2.563rem]">
-						<div class="flex flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] sm:mb-[2.563rem] 2xl:mb-0">
+					<div class="flex 2xl:flex-row flex-col items-center justify-center mb-[2.563rem]">
+						<div class="flex flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.563rem] 2xl:mb-0">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M43.7274 39.891L41.733 40.5629C41.1823 40.7461 40.7419 41.1736 40.5583 41.7355L39.8853 43.7265C39.3103 45.4487 36.8876 45.4121 36.3492 43.6898L34.0855 36.4221C33.6451 34.9807 34.9788 33.6371 36.4104 34.089L43.7029 36.3488C45.416 36.8862 45.4404 39.3169 43.7274 39.891Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -232,7 +233,7 @@
 								<p class="font-[500] text-[1rem] font-[Manrope] text-[#FFFF] uppercase leading-8">Choose between a Boosting / Coaching Service.</p>
 							</div>
 						</div>
-						<div class="flex 2xl:ml-[3.375rem] sm:ml-0 flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] ">
+						<div class="flex 2xl:ml-[3.375rem] ml-0 flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] ">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M27.3256 26.11L36.8769 22.9262C41.1631 21.4975 43.4919 23.8375 42.0744 28.1237L38.8906 37.675C36.7531 44.0987 33.2431 44.0987 31.1056 37.675L30.1606 34.84L27.3256 33.895C20.9019 31.7575 20.9019 28.2587 27.3256 26.11Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -244,8 +245,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="flex 2xl:flex-row sm:flex-col items-center justify-center sm:mb-[2.563rem] 2xl:mb-0">
-						<div class="flex flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] sm:mb-[2.563rem] 2xl:mb-0">
+					<div class="flex 2xl:flex-row flex-col items-center justify-center mb-[2.563rem] 2xl:mb-0">
+						<div class="flex flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.563rem] 2xl:mb-0">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M32.5 42.1875C37.8503 42.1875 42.1875 37.8503 42.1875 32.5C42.1875 27.1497 37.8503 22.8125 32.5 22.8125C27.1497 22.8125 22.8125 27.1497 22.8125 32.5C22.8125 37.8503 27.1497 42.1875 32.5 42.1875Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -260,7 +261,7 @@
 								<p class="font-[500] text-[1rem] font-[Manrope] text-[#FFFF] uppercase leading-8">Track your order’s status in real time!</p>
 							</div>
 						</div>
-						<div class="flex 2xl:ml-[3.375rem] sm:ml-0 flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] ">
+						<div class="flex 2xl:ml-[3.375rem] ml-0 flex-row items-center justify-start w-[37.125rem] h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] ">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M29.2578 35.1L31.1361 36.5584C31.3811 36.8034 31.9295 36.92 32.2912 36.92H34.6011C35.3245 36.92 36.1178 36.3717 36.3045 35.6483L37.7628 31.2266C38.0662 30.3749 37.5178 29.6516 36.6078 29.6516H34.1811C33.8195 29.6516 33.5162 29.3483 33.5745 28.9283L33.8778 26.9916C33.9945 26.4433 33.6328 25.8366 33.0845 25.6616C32.5945 25.4749 31.9878 25.7199 31.7545 26.0816L29.2695 29.78" stroke="white" stroke-width="1.5" stroke-miterlimit="10"/>
@@ -280,8 +281,8 @@
 					<p class="text-[#757095] font-[Manrope]">Accmart Latest customer reviews and feedback about products &  services quality.</p>
 				</section>
 			<!-- backround 2 end -->
-				<section class="flex flex-row justify-center items-center ">
-					<div class="px-[2.375rem] pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
+				<section class="flex lg:flex-row flex-col items-center justify-center mb-[2.563rem]">
+					<div class="px-[2.375rem] mb-[2.563rem] lg:mb-0 pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
 						<svg class="mb-[1.813rem]" width="96" height="17" viewBox="0 0 96 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M8.49106 0.681559C8.56875 0.457383 8.88579 0.457382 8.96349 0.681558L10.6284 5.48537C10.6633 5.58601 10.7581 5.6535 10.8646 5.6535H16.2163C16.4623 5.6535 16.5604 5.9716 16.357 6.11012L12.0558 9.03984C11.9625 9.10341 11.9233 9.22164 11.9603 9.32833L13.6097 14.0873C13.6885 14.3148 13.4317 14.5114 13.2327 14.3758L8.86801 11.4029C8.7831 11.345 8.67145 11.345 8.58654 11.4029L4.22183 14.3758C4.02282 14.5114 3.76602 14.3148 3.84488 14.0873L5.49425 9.32833C5.53123 9.22164 5.4921 9.10341 5.39877 9.03984L1.09753 6.11012C0.894156 5.9716 0.992198 5.6535 1.23827 5.6535H6.58993C6.69645 5.6535 6.79127 5.58601 6.82615 5.48537L8.49106 0.681559Z" fill="#E94A65"/>
 							<path d="M28.1278 0.681559C28.2055 0.457383 28.5225 0.457382 28.6002 0.681558L30.2651 5.48537C30.3 5.58601 30.3948 5.6535 30.5013 5.6535H35.853C36.0991 5.6535 36.1971 5.9716 35.9937 6.11012L31.6925 9.03984C31.5992 9.10341 31.56 9.22164 31.597 9.32833L33.2464 14.0873C33.3252 14.3148 33.0685 14.5114 32.8694 14.3758L28.5047 11.4029C28.4198 11.345 28.3082 11.345 28.2233 11.4029L23.8585 14.3758C23.6595 14.5114 23.4027 14.3148 23.4816 14.0873L25.131 9.32833C25.1679 9.22164 25.1288 9.10341 25.0355 9.03984L20.7342 6.11012C20.5309 5.9716 20.6289 5.6535 20.875 5.6535H26.2267C26.3332 5.6535 26.428 5.58601 26.4629 5.48537L28.1278 0.681559Z" fill="#E94A65"/>
@@ -292,7 +293,7 @@
 						<p class="text-[#FFFFFF] mb-[2rem] text-[1rem] leading-[1.75rem] font-[Manrope] h-[8.75rem] flex items-center">Very friendly and great person! Extremely fast turn around time, and very understanding when having some issues getting on my account! Highly Reccomend</p>
 						<p class="text-[#FFFFFF] mb-[2rem] text-[1rem] leading-[1.75rem] font-[Manrope]">Skill Rating Boost<br><span class="text-[#E94A65]">2278 - 2500</span></p>
 					</div>
-					<div class="ml-[1.813rem] px-[2.375rem] pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
+					<div class="lg:ml-[1.813rem] mb-[2.563rem] lg:mb-0 ml-0 px-[2.375rem] pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
 						<svg class="mb-[1.813rem]" width="96" height="17" viewBox="0 0 96 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M8.49106 0.681559C8.56875 0.457383 8.88579 0.457382 8.96349 0.681558L10.6284 5.48537C10.6633 5.58601 10.7581 5.6535 10.8646 5.6535H16.2163C16.4623 5.6535 16.5604 5.9716 16.357 6.11012L12.0558 9.03984C11.9625 9.10341 11.9233 9.22164 11.9603 9.32833L13.6097 14.0873C13.6885 14.3148 13.4317 14.5114 13.2327 14.3758L8.86801 11.4029C8.7831 11.345 8.67145 11.345 8.58654 11.4029L4.22183 14.3758C4.02282 14.5114 3.76602 14.3148 3.84488 14.0873L5.49425 9.32833C5.53123 9.22164 5.4921 9.10341 5.39877 9.03984L1.09753 6.11012C0.894156 5.9716 0.992198 5.6535 1.23827 5.6535H6.58993C6.69645 5.6535 6.79127 5.58601 6.82615 5.48537L8.49106 0.681559Z" fill="#E94A65"/>
 							<path d="M28.1278 0.681559C28.2055 0.457383 28.5225 0.457382 28.6002 0.681558L30.2651 5.48537C30.3 5.58601 30.3948 5.6535 30.5013 5.6535H35.853C36.0991 5.6535 36.1971 5.9716 35.9937 6.11012L31.6925 9.03984C31.5992 9.10341 31.56 9.22164 31.597 9.32833L33.2464 14.0873C33.3252 14.3148 33.0685 14.5114 32.8694 14.3758L28.5047 11.4029C28.4198 11.345 28.3082 11.345 28.2233 11.4029L23.8585 14.3758C23.6595 14.5114 23.4027 14.3148 23.4816 14.0873L25.131 9.32833C25.1679 9.22164 25.1288 9.10341 25.0355 9.03984L20.7342 6.11012C20.5309 5.9716 20.6289 5.6535 20.875 5.6535H26.2267C26.3332 5.6535 26.428 5.58601 26.4629 5.48537L28.1278 0.681559Z" fill="#E94A65"/>
@@ -303,7 +304,7 @@
 						<p class="text-[#FFFFFF] mb-[2rem] text-[1rem] leading-[1.75rem] font-[Manrope] h-[8.75rem] flex items-center">Did an excellent job. Was very friendly and responsive. Great Service :)</p>
 						<p class="text-[#FFFFFF] mb-[2rem] text-[1rem] leading-[1.75rem] font-[Manrope]">Placement Games : 10 Games<br><span class="text-[#E94A65]">Grandmaster 4000-4200</span></p>
 					</div>
-					<div class="ml-[1.813rem] px-[2.375rem] pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
+					<div class="lg:ml-[1.813rem] ml-0 px-[2.375rem] pt-[3.25rem] w-[23.75rem] flex flex-col justify-start items-start h-[22.875rem] bg-[#17182D] rounded-[0.625rem]">
 						<svg class="mb-[1.813rem]" width="96" height="17" viewBox="0 0 96 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M8.49106 0.681559C8.56875 0.457383 8.88579 0.457382 8.96349 0.681558L10.6284 5.48537C10.6633 5.58601 10.7581 5.6535 10.8646 5.6535H16.2163C16.4623 5.6535 16.5604 5.9716 16.357 6.11012L12.0558 9.03984C11.9625 9.10341 11.9233 9.22164 11.9603 9.32833L13.6097 14.0873C13.6885 14.3148 13.4317 14.5114 13.2327 14.3758L8.86801 11.4029C8.7831 11.345 8.67145 11.345 8.58654 11.4029L4.22183 14.3758C4.02282 14.5114 3.76602 14.3148 3.84488 14.0873L5.49425 9.32833C5.53123 9.22164 5.4921 9.10341 5.39877 9.03984L1.09753 6.11012C0.894156 5.9716 0.992198 5.6535 1.23827 5.6535H6.58993C6.69645 5.6535 6.79127 5.58601 6.82615 5.48537L8.49106 0.681559Z" fill="#E94A65"/>
 							<path d="M28.1278 0.681559C28.2055 0.457383 28.5225 0.457382 28.6002 0.681558L30.2651 5.48537C30.3 5.58601 30.3948 5.6535 30.5013 5.6535H35.853C36.0991 5.6535 36.1971 5.9716 35.9937 6.11012L31.6925 9.03984C31.5992 9.10341 31.56 9.22164 31.597 9.32833L33.2464 14.0873C33.3252 14.3148 33.0685 14.5114 32.8694 14.3758L28.5047 11.4029C28.4198 11.345 28.3082 11.345 28.2233 11.4029L23.8585 14.3758C23.6595 14.5114 23.4027 14.3148 23.4816 14.0873L25.131 9.32833C25.1679 9.22164 25.1288 9.10341 25.0355 9.03984L20.7342 6.11012C20.5309 5.9716 20.6289 5.6535 20.875 5.6535H26.2267C26.3332 5.6535 26.428 5.58601 26.4629 5.48537L28.1278 0.681559Z" fill="#E94A65"/>
@@ -397,17 +398,17 @@
 					</div>
 				</section>
 			<!-- content 5 -->
-				<section id="content5" data-aos="fade-up" class="rounded-[1.25rem] 2xl:w-[75rem] lg:w-full">
+				<section id="content5" data-aos="fade-up" class="rounded-[1.25rem] 2xl:w-[75rem] w-full lg:h-[23.063rem] h-fit">
 					<div style="background: linear-gradient(96.71deg, #E94A65 -7.49%, #FF274C 104.29%);" class="rounded-[1.25rem] px-[3.688rem] py-[4rem] opacity-90 w-full h-full">
 						<div class="flex flex-col justify-start items-center">
 							<div class="flex flex-row items-start justify-start w-full">
-								<h2 class="text-[0.875rem] font-[100] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">THE BEST &nbsp;</h2>
-								<h2 class="text-[0.875rem] font-[900] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">OVERWATCH 2 &nbsp;</h2>
-								<h2 class="text-[0.875rem] font-[100] font-[Rubik] text-[#FFFFFF] tracking-[0.435rem] uppercase leading-[3.125rem]">BOOSTING SERVICE</h2>
+								<h2 class="lg:text-[0.875rem] text-[0.6rem] font-[100] font-[Rubik] text-[#FFFFFF] lg:tracking-[0.435rem] tracking-[0.2rem] uppercase md:leading-[3.125rem] leading-[2rem]">THE BEST &nbsp;</h2>
+								<h2 class="lg:text-[0.875rem] text-[0.6rem] font-[900] font-[Rubik] text-[#FFFFFF] lg:tracking-[0.435rem] tracking-[0.2rem] uppercase md:leading-[3.125rem] leading-[2rem]">OVERWATCH 2 &nbsp;</h2>
+								<h2 class="lg:text-[0.875rem] text-[0.6rem] font-[100] font-[Rubik] text-[#FFFFFF] lg:tracking-[0.435rem] tracking-[0.2rem] uppercase md:leading-[3.125rem] leading-[2rem]">BOOSTING SERVICE</h2>
 							</div>
 							<div class="flex flex-col items-start justify-start w-full">
-								<h2 class="text-[3.100rem] font-extralight font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase leading-[3.375rem]">CHEAP OVERWATCH 2</h2>
-								<h2 class="pb-[1.438rem] text-[3.125rem] font-bold font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase leading-[3.375rem]">BOOST BY THE BEST BOOSTERS</h2>
+								<h2 class="lg:text-[3.100rem] md:text-[2.5rem] text-[1.5rem] font-extralight font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase md:leading-[3.125rem] leading-[2rem]">CHEAP OVERWATCH 2</h2>
+								<h2 class="pb-[1.438rem] lg:text-[3.100rem] md:text-[2.5rem] text-[1.5rem] font-bold font-[Rubik] text-[#FFFFFF] tracking-[-0.03em] uppercase md:leading-[3.125rem] leading-[2rem]">BOOST BY THE BEST BOOSTERS</h2>
 								<button style="background: rgba(19, 20, 41, 0.2);" class="flex flex-row justify-center items-center font-[Inter] text-[1rem] color-[#FFFFFF] w-[11.938rem] h-[3.625rem] bg-[#E94A65]  rounded-[1.875rem] text-white">Get Booster
 									<svg  class="relative left-1.5 top-0.5" width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M10 1L15 6L10 11" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
