--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 				</section>
 			</div>
 		</section>
-		<div style="background-image: url(img/backround\ 3.png); background-repeat:no-repeat; background-size: 100% auto;" class="w-full">
+		<div style="background-image: url(img/backround\ 3.png); background-repeat:no-repeat; background-position: bottom; background-size: 100% auto;" class="w-full">
 			<div class="container">
 				<footer class="p-4  sm:p-6">
 					<div class="flex justify-center gap-6">
