--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				</nav>
 			</div>
             <!-- HERO -->
-			<section class="flex flex-col items-center md:justify-start justify-center mt-[184px] mb-[11.375rem]">
+			<section class="flex flex-col items-center md:justify-start justify-center md:mt-[184px] mt-[84px] md:mb-[11.375rem] mb[84p]">
 				<div class="flex flex-row items-center md:justify-start justify-center w-full pl-0 md:pl-[5.5rem]">
 					<h2 class="md:text-[0.875rem] text-[0.5rem] font-[400] font-[Rubik] text-[#FFFFFF] md:tracking-[0.435rem] tracking-[0.2rem] uppercase leading-[1.5rem] md:leading-[3.125rem]">THE BEST &nbsp;</h2>
 					<h2 class="md:text-[0.875rem] text-[0.5rem] font-[400] font-[Rubik] text-[#e94a65] md:tracking-[0.435rem] tracking-[0.2rem] uppercase leading-[1.5rem] md:leading-[3.125rem]">OVERWATCH 2 &nbsp;</h2>
