--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
 							<h1 class="md:text-[1.125rem] text-[0.7rem] leading[1.625rem] tracking-[-0.04em] text-center text-[#757095] font-[Manrope]"> Overwatch 2 boosting frequently asked questions answered.</h1>
 							<br>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc1', 'svg1')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">What is your Refund Policy? </h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg"  onclick="ft_sc('svg2', 'psc2')">
+										<svg id="svg1"  width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
@@ -345,46 +345,46 @@
 									We do full refunds before the start of the boost if for any reason you change your mind and decide to not to use our services. If the boost has already begun, we will calculate a partial refund for you.                
 							</div>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc2', 'svg2')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Who will play on my account?</h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<svg id="svg2"   width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
 								</button>
-								<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
+								<p  id="psc2" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 									We only hire players who were able to get 4000+ Skill Rating on their Overwatch accounts (Specific Roles). We carefully check the candidates for the reality of this rating. In the process, we ban boosters that violate our internal rules, such as chat with client’s friends without permission, toxic behavior, or taking an order without being ready to start a boost.
 							</div>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc3', 'svg3')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">How long will it take to complete my order?</h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<svg id="svg3"   width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
 								</button>
-								<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
+								<p  id="psc3" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 									This is usually really fast. Most small orders with shorter lengths end on the same day. The speed of execution depends on a number of factors such as the length of the order, the desired rating and your MMR. Duo orders are also executed longer than solo orders, so duo orders require you and your booster to be ready to play at the same time.
 							</div>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc4', 'svg4')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Is it possible to make the booster play on the heroes of my choice?</h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<svg id="svg4"   width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
 								</button>
-								<p  id="psc1" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
+								<p  id="psc4" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 									Yes, we provide such a service as an extra option you can choose while creating your order!
 							</div>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc5', 'svg5')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">Will my account got banned?</h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<svg id="svg5"   width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
@@ -393,15 +393,15 @@
 									At the moment, we have not encountered ANY cases of ban for Overwatch boost. Perhaps this can change, but at the moment everything looks very safe.
 							</div>
 							<div class="bg-[#17182D] border-2 border-[#75709540] rounded-lg bo">
-								<button class="flex items-center justify-between w-full p-8">
+								<button class="flex items-center justify-between w-full p-8" onclick="ft_sc('psc6', 'svg6')">
 									<h1 class="font-[Manrope] text-[1.375rem] font-bold	text-white leading-8">What happens after payment?</h1>
 									<span class="text-white  rounded-full">
-										<svg width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<svg id="svg6"   width="18" height="8" viewBox="0 0 18 8" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path d="M16.84 7.19587L10.32 1.68412C9.55 1.03319 8.29 1.03319 7.52 1.68412L1 7.19587" stroke="white" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
 									</span>
 								</button>
-								<p id="psc5" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
+								<p id="psc6" class="font-[Manrope] font-medium p-8 text-[1rem] leading-[1.75rem] text-white" style="margin-top: -50px;">
 									You will be redirected back to the page of our client area, where you can register an account on our service. It takes a couple of minutes. After that, your order will go to our database, where carefully selected boosters will be able to pick up your order and start right away! The whole process for most orders takes no more than 5-15 minutes.                
 							</div>
 						</div>
@@ -538,6 +538,7 @@
 			</div>
 		</div>
 	</body>
+	<script src="script.js" ></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
 		    const burger = document.querySelectorAll('.navbar-burger');
