--- a/index.html
+++ b/index.html
@@ -605,6 +605,9 @@
 		prevEl: ".swiper-button-prev",
 		},
 		breakpoints:{
+			0: {
+				slidesPerView: 1,
+			},
 			400: {
 				slidesPerView: 1,
 			},
