--- a/boost1.html
+++ b/boost1.html
@@ -124,7 +124,7 @@
 					<h2 class="md:text-[0.875rem] text-[0.5rem] font-[400] font-[Rubik] text-[#FFFFFF] md:tracking-[0.435rem] tracking-[0.2rem] uppercase leading-[1.5rem] md:leading-[3.125rem]">BOOSTING SERVICE</h2>
 				</div>
 			</section>
-			<div class="rank-boost px-8 mx-auto lg:w-fit w-full flex mb-[60px] ">
+			<div class="rank-boost px-8 mx-auto xl:w-fit w-full flex mb-[60px] ">
 				<div>
 					<ol class="flex flex-row items-center justify-center gap-[51px] text-sm">
 						<li class="flex items-center justify-center text-[#72B218] bg-[#E94A65] h-[56px] w-[276px] rounded-[39px]">
@@ -168,29 +168,16 @@
 		</div>
 		<!-- nav bar -->
 		<div  class="container flex justify-center mx-auto items-center">
-			<div class="flex flex-row justify-center items-center">
-				<ol class="flex flex-row justify-center item-center gap-[169px]">
-					<li class="flex items-center justify-center text-[#72B218]">
+			<div class="flex flex-row justify-center items-center gap-[139px]">
+				<div class="flex flex-col gap-[70px]">
+					<div class="flex">
 						<span class="mr-4">
-							<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 							</svg>
 						</span>
-						<h1 class="hidden sm:inline text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px] ">SELECT  YOUR CURRENT RANK</h1>
-					</li>
-					<li class="flex items-center justify-center text-[#72B218]  lg:mr-[35px]">
-						<h1 class="hidden sm:inline text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px] mr-8">SELECT  YOUR DESIRED RANK</h1>
-						<span class="">
-							<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<circle cx="2" cy="2" r="2" fill="#E94A65"/>
-							</svg>
-						</span>
-
-					</li>
-				</ol>
-			</div>
-			<div class="px-[50px] container sm:w-[90%] flex w-full mt-[71px]">
-				<div>
+						<h1 class="hidden sm:inline text-[#E94A65] xl:text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px]"><span class="text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px] ">SELECT  YOUR </span> CURRENT RANK</h1>
+					</div>
 					<div class="flex flex-row justify-center item-center gap-[139px]">
 						<li class="flex items-center justify-center text-[#72B218] rounded-[39px]">
 							<select  style="outline: none; " name="" id="sel" class=" w-[245px] h-[49px] font-[Manrope] font-bold text-center bg-[#E94A65] text-[#ffff] rounded-[7px] mr-4">
@@ -206,14 +193,26 @@
 								<option class="font-[Inter] font-normal"  value=""></option>
 							</select>
 						</li>
+					</div>
+				</div>
+				<div class="flex flex-col gap-[70px]">
+					<div class="flex">
+						<span class="mr-4">
+							<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="2" cy="2" r="2" fill="#E94A65"/>
+							</svg>
+						</span>
+						<h1 class="hidden sm:inline text-[#E94A65] xl:text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px]"><span class="text-[#ffff] font-[Manrope] font-normal font-[700] text-[22px] ">SELECT  YOUR </span> DESIRED RANK</h1>
+					</div>
+					<div class="flex flex-row justify-center item-center gap-[139px]">
 						<li class="flex items-center justify-center text-[#72B218] rounded-[39px]">
-							<select  style="outline: none; " name="" id="sel" class=" w-[245px] h-[49px] font-[Inter] font-bold text-center  bg-[#E94A65] text-[#ffff] rounded-[7px] mr-4">
+							<select  style="outline: none; " name="" id="sel" class=" w-[245px] h-[49px] font-[Manrope] font-bold text-center bg-[#E94A65] text-[#ffff] rounded-[7px] mr-4">
 								<option class="font-[Manrope] font-[600] text-[16px]"  value="">Platinium</option>
 								<option class="font-[Manrope] font-[600] text-[16px]"  value=""></option>
 								<option class="font-[Manrope] font-[600] text-[16px]"  value="BTC"></option>
 								<option class="font-[Manrope] font-[600] text-[16px]"  value=""></option>
 							</select>
-							<select  style="outline: none; " name="" id="sel" class=" w-[78px] h-[48px] font-[Inter] font-bold text-center bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
+							<select  style="outline: none; " name="" id="sel" class=" w-[78px] h-[48px] font-[Inter] font-bold  text-center bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
 								<option class="font-[Inter] font-normal"  value="">1</option>
 								<option class="font-[Inter] font-normal"  value=""></option>
 								<option class="font-[Inter] font-normal"  value="BTC"></option>
@@ -223,17 +222,22 @@
 					</div>
 				</div>
 			</div>
+			<div class="px-[50px] container sm:w-[90%] flex w-full mt-[71px]">
+				<div>
+					
+				</div>
+			</div>
 			<section class="flex flex-col items-center jusitify-center mx-auto my-[66px]" data-aos="fade-up">
 				<div class="mb-[-1.2rem] flex flex-row justify-between items-center">
-					<span class="mr-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
-					<svg width="4" class="lg:inline hidden" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<span class="mr-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<svg width="4" class="xl:inline hidden" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
 					<h2 class="mx-[14px] text-[22px] text-center md:leading-[3.125rem] leading-[60px] whitespace-nowrap	 font-[700] font-[Manrope] text-[#ffff] uppercase">SELECT  YOUR  PLATFORM</h2>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
-					<span class="ml-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<span class="ml-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
 				</div>
 			</section>
 			<div class="flex justify-center items-center mx-auto">
@@ -260,15 +264,15 @@
 			</div>
 			<section class="flex flex-col items-center jusitify-center mx-auto my-[66px]" data-aos="fade-up">
 				<div class="mb-[-1.2rem] flex flex-row justify-between items-center">
-					<span class="mr-[41px] lg:inline hidden " style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<span class="mr-[41px] xl:inline hidden " style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
 					<h2 class="mx-[14px] text-[22px] text-center md:leading-[3.125rem] whitespace-nowrap leading-[60px] font-[600] font-[Manrope] text-[#ffff] uppercase">SELECT  ROLE & SERVER</h2>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
-					<span class="ml-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<span class="ml-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
 				</div>
 			</section>
 			<div class="role-server justify-center grow columns-2 gap-[50px]">
@@ -315,15 +319,15 @@
 			</div>
 			<section class="flex flex-col items-center jusitify-center mx-auto my-[66px]" data-aos="fade-up">
 				<div class="mb-[-1.2rem] flex flex-row justify-between items-center">
-					<span class="mr-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<span class="mr-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
 					<h2 class="mx-[14px] whitespace-nowrap	 text-[22px] text-center md:leading-[3.125rem] leading-[60px] font-[700] font-[Manrope] text-[#ffff] uppercase">BOOSTING ADDONS</h2>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
-					<span class="ml-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<span class="ml-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
 				</div>
 			</section>
 			<div class="flex flex-col justify-center items-center">
@@ -376,15 +380,15 @@
 			</div>
 			<section class="flex flex-col items-center jusitify-center mx-auto mt-[113px] mb-[96px]" data-aos="fade-up">
 				<div class="mb-[-1.2rem] flex flex-row justify-between items-center">
-					<span class="mr-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<span class="mr-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
 					<h2 class="mx-[14px] whitespace-nowrap	 text-[22px] text-center md:leading-[3.125rem] leading-[60px] font-[600] font-[Manrope] text-[#ffff] uppercase">ORDER SUMMARY</h2>
-					<svg width="4" class="lg:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="2" cy="2" r="2" fill="#E94A65"/>
 					</svg>
-					<span class="ml-[41px] lg:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
+					<span class="ml-[41px] xl:inline hidden" style="width: 361px; border: 1px solid rgba(117, 112, 149, 0.2);"></span>
 				</div>
 			</section>
 			<div style="margin-top: 0;" class="prices">
