--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 						</ul>
 					</nav>
 					<hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
-					<div class="sm:flex sm:items-center sm:justify-between">
+					<div class="flex items-center justify-between">
 						<span class="font-[Inter] text-sm text-[#D9DBE1] sm:text-center">© 2020 ACCMART. All rights reserved</span>
 						<div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
 							<a href="#" class="text-gray-500 hover:text-[#ffff] dark:hover:text-white">
