--- a/boost1.html
+++ b/boost1.html
@@ -16,6 +16,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+
 </head>
 <body class="bg-[#131429]">
 	<!-- container  -->
@@ -255,28 +256,24 @@
 			<div class="flex flex-col lg:gap-[70px] gap-[30px]">
 				<div class="flex">
 					<span class="mr-4">
-						<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none"
-							xmlns="http://www.w3.org/2000/svg">
-							<circle cx="2" cy="2" r="2" fill="#E94A65" />
+						<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<circle cx="2" cy="2" r="2" fill="#E94A65"></circle>
 						</svg>
 					</span>
-					<h1 id="h1-style-mb"
-						class=" text-[#E94A65] xl:text-[#ffff] font-[Manrope] font-normal font-[700] sm:mx-0 mx-auto text-[10px] sm:text-[22px]">
+					<h1 id="h1-style-mb" class=" text-[#E94A65] xl:text-[#ffff] font-[Manrope] font-normal font-[700] sm:mx-0 mx-auto text-[10px] sm:text-[22px]">
 						<span class="text-[#ffff] font-[Manrope] font-normal font-[700]">SELECT YOUR </span> CURRENT
 						RANK
 					</h1>
 				</div>
 				<div class="flex flex-row justify-center item-center gap-[139px]">
 					<li class="flex items-center justify-center text-[#72B218] rounded-[39px]">
-						<select id="w-mb" style="outline: none; " name=""
-							class=" sm:w-[245px] w-[134px] sm:h-[49px] h-[33px] font-[Manrope] font-bold text-center bg-[#E94A65] text-[#ffff] sm:text-[16px] text-[10px] rounded-[7px] mr-4">
+						<select id="w-mb" style="outline: none; " name="" class=" sm:w-[245px] w-[134px] sm:pl-[30%] pl-[25%] sm:h-[49px] h-[33px] font-[Manrope] font-bold  bg-[#E94A65] text-[#ffff] sm:text-[16px] text-[10px] rounded-[7px] mr-4">
 							<option class="font-[Manrope] font-[600] text-[16px]" value="">Gold</option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value=""></option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value="BTC"></option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value=""></option>
 						</select>
-						<select style="outline: none; " name="" id="sel"
-							class=" sm:w-[78px] w-[60px] h-[33px] sm:h-[48px] font-[Inter] font-bold sm:text-[16px] text-[10px] text-center bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
+						<select style="outline: none; " name="" id="sel" class=" sm:w-[78px] w-[60px] sm:pl-[8%] pl-[10%] h-[33px] sm:h-[48px] font-[Inter] font-bold sm:text-[16px] text-[10px] bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
 							<option class="font-[Inter] font-normal" value="">1</option>
 							<option class="font-[Inter] font-normal" value=""></option>
 							<option class="font-[Inter] font-normal" value="BTC"></option>
@@ -288,28 +285,24 @@
 			<div class="flex flex-col lg:gap-[70px] gap-[30px]">
 				<div class="flex">
 					<span class="mr-4">
-						<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none"
-							xmlns="http://www.w3.org/2000/svg">
+						<svg width="4" class="xl:inline hidden" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<circle cx="2" cy="2" r="2" fill="#E94A65"></circle>
 						</svg>
 					</span>
-					<h1 id="h1-style-mb"
-						class=" text-[#E94A65] xl:text-[#ffff] sm:mx-0 mx-auto font-[Manrope] font-normal font-[700] text-[10px] sm:text-[22px]">
+					<h1 id="h1-style-mb" class=" text-[#E94A65] xl:text-[#ffff] sm:mx-0 mx-auto font-[Manrope] font-normal font-[700] text-[10px] sm:text-[22px]">
 						<span class="text-[#ffff] font-[Manrope] font-normal font-[700] ">SELECT YOUR </span> DESIRED
 						RANK
 					</h1>
 				</div>
 				<div class="flex flex-row justify-center item-center gap-[139px]">
 					<li class="flex items-center justify-center text-[#72B218] rounded-[39px]">
-						<select id="w-mb" style="outline: none; " name=""
-							class=" sm:w-[245px] w-[134px] sm:h-[49px] h-[33px] font-[Manrope] font-bold text-center bg-[#E94A65] text-[#ffff] sm:text-[16px] text-[10px] rounded-[7px] mr-4">
+						<select id="w-mb2" style="outline: none; " name="" class=" sm:w-[245px] w-[134px] sm:pl-[25%] pl-[20%] sm:h-[49px] h-[33px] font-[Manrope] font-bold bg-[#E94A65] text-[#ffff] sm:text-[16px] text-[10px] rounded-[7px] mr-4">
 							<option class="font-[Manrope] font-[600] text-[16px]" value="">Platinium</option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value=""></option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value="BTC"></option>
 							<option class="font-[Manrope] font-[600] text-[16px]" value=""></option>
 						</select>
-						<select style="outline: none; " name="" id="sel"
-							class=" sm:w-[78px] w-[60px] h-[33px] sm:h-[48px] font-[Inter] font-bold sm:text-[16px] text-[10px] text-center bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
+						<select style="outline: none; " name="" id="sel" class=" sm:w-[78px] w-[60px] h-[33px] sm:pl-[8%] pl-[10%] sm:h-[48px] font-[Inter] font-bold sm:text-[16px] text-[10px] bg-[#131429] text-[#ffff] rounded-[7px] border border-[#E14A7D]">
 							<option class="font-[Inter] font-normal" value="">1</option>
 							<option class="font-[Inter] font-normal" value=""></option>
 							<option class="font-[Inter] font-normal" value="BTC"></option>
@@ -782,6 +775,7 @@
 		</footer>
 	</div>
 </body>
+<script>window.MSInputMethodContext && document.documentMode && document.write('<script src="https://cdn.jsdelivr.net/gh/nuxodin/ie11CustomProperties@4.1.0/ie11CustomProperties.min.js"><\/script>');</script>
 <script>
 	document.addEventListener('DOMContentLoaded', function() {
 		const burger = document.querySelectorAll('.navbar-burger');
